colour contrast fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,11 +75,11 @@ footer {
 }
 
 .content h2 {
-    color:#A1CBCF;
+    color:#008080;
 }
 
 .content .button {
-    background-color:#A1CBCF;
+    background-color:#008080;
     border-radius: 15px;
     color: white;
     padding: 15px 32px;
@@ -113,7 +113,7 @@ footer {
 /* ----------- SIGN UP AND SIGN IN PAGE ----------- */
 .content #auth {
     border-style:solid;
-    border-color:#A1CBCF;
+    border-color:#008080;
     width:25%;
     border-radius:15px;
     padding:45px;
@@ -135,7 +135,7 @@ footer {
     border-style:solid 2px;
     border-color:grey;
     font-size:15px;
-    color: #A1CBCF;
+    color: #008080;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -145,7 +145,7 @@ footer {
 
 /* ----------- CREATE LIST PAGE ----------- */
 .content #create-list-header {
-    border-bottom:2px solid #A1CBCF;
+    border-bottom:2px solid #008080;
     padding-bottom:20px;
     margin-bottom:45px;
 }
@@ -197,7 +197,7 @@ footer {
     border-radius: 15px;
     border:solid 2px grey;
     font-size:15px;
-    color: #A1CBCF;
+    color: #008080;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -218,7 +218,7 @@ tr{
 
 /* ----------- MAIN LIST PAGE ----------- */
 .content .list-header {
-    border-bottom:2px solid #A1CBCF;
+    border-bottom:2px solid #008080;
     padding-bottom:20px;
     margin-bottom:45px;
 }
